# Info_AI_Studio

./: .env  .env.example  Makefile  README.md  create_project.sh  create_structure.sh  data.db  patch.sh  pyproject.toml  requisitos_sw.md
backup/: info_ai_studio_20250917_212143.db
especificacoes/: consulta_fontes.md
examples/: canal.txt  cookies.txt
prompts/: prompt_noticas_web.md
resultados_extracao/: SAIDA_TESTE_20250919_210937.json  SAIDA_TESTE_20250919_210937.txt  saida_1_20250917_212210.json  saida_20250919_124721.json  saida_20250919_124721.txt  saida_2_20250917_214432.json  web_prompt_20250922_095956.txt  web_prompt_20250922_102808.txt  web_prompt_20250922_105020.txt  web_prompt_20250922_105247.txt  web_prompt_20250922_105446.txt  web_prompt_20250922_105618.txt  web_prompt_20250922_105841.md  web_prompt_20250923_085230.txt  web_prompt_20250923_085627.md  youtube_extract_full_20250920_182602.json  youtube_extract_full_20250920_182602.txt  youtube_extract_full_20250920_184622.json  youtube_extract_full_20250920_184622.md  youtube_extract_full_20250920_192727.json  youtube_extract_full_20250920_192727.txt  youtube_extract_full_20250920_194732.json  youtube_extract_full_20250920_194732.txt  youtube_extract_full_20250920_203444.json  youtube_extract_full_20250920_203444.txt  youtube_extract_full_20250923_090344.json  youtube_extract_full_20250923_090344.md  youtube_extract_full_20250923_140102.json  youtube_extract_full_20250923_140102.txt  youtube_extract_simple_20250920_165951.json  youtube_extract_simple_20250920_165951.txt  (+125 more)
scripts/: create_project.sh  (+1 more)
(+51 files in other folders)
