[project]
name = "info-ai-studio"
version = "0.1.0"
description = "Info_AI_Studio: coleta de informações web e YouTube com interface CLI e Streamlit"
authors = [{name = "Info_AI_Studio Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32",
    "typer[all]>=0.9",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "python-dateutil>=2.8",
    "youtube-transcript-api>=0.6.2",
    "openai>=1.12",
    "yt-dlp>=2024.3.10",
    "faster-whisper>=1.0.0",
    "fpdf2>=2.7.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
app = "app.interfaces.cli.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"